--- a/src/main/resources/com/example/centrocomercialgui/centro-view.fxml
+++ b/src/main/resources/com/example/centrocomercialgui/centro-view.fxml
@@ -105,7 +105,7 @@
                                     <Font name="System Bold" size="13.0" />
                                  </font>
                               </Label>
-                              <Button alignment="CENTER" mnemonicParsing="false" prefWidth="150.0" text="Editar Loja">
+                              <Button alignment="CENTER" mnemonicParsing="false" onAction="#editarLojaAction" prefWidth="150.0" text="Editar Loja">
                                  <VBox.margin>
                                     <Insets bottom="10.0" left="5.0" top="10.0" />
                                  </VBox.margin>
